--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ openai==1.3.8
 pydantic==2.5.1
 python-multipart==0.0.6
 pyyaml==6.0.1
+gunicorn==21.2.0
+google-generativeai==0.3.2
+google-cloud-logging==3.8.0
+google-cloud-storage==2.10.0
+aiofiles==23.2.1
+jinja2==3.1.2
